--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ ul {
   /* background-color: red; */
   margin: auto;
   width: 70%;
-  /* padding: 20px 0; */
+  height: 100vh;
 }
 
 .row {
@@ -95,6 +95,31 @@ ul {
   background-position: left top;
 }
 
+#hero #img-container {
+  max-width: 1130px;
+  height: auto;
+  position: relative;
+}
+
+#hero #img-container::before {
+  content: "";
+  width: 100%;
+  aspect-ratio: 1130 / 680;
+  border: black 1px solid;
+  box-sizing: border-box;
+  position: absolute;
+  top: -10px;
+  left: -10px;
+  z-index: 0;
+}
+
+#hero #img-container img {
+  width: 100%;
+  display: block;
+  position: relative;
+  z-index: 10;
+}
+
 /* Gallery Section */
 
 .page-section#gallery {
@@ -113,6 +138,21 @@ ul {
   background-position: left top;
 }
 
+#jobs .container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+#jobs .container ol {
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  align-items: center;
+}
+
 /* Contact Section & Footer*/
 
 .page-section#contact {
@@ -121,6 +161,23 @@ ul {
   background-color: var(--primaryBackgroundColor);
   background-size: 79% auto;
   background-position: right bottom;
+}
+
+#contact .container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+#contact .container #contacts-container {
+  flex-grow: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 /* Media Query */
