added blur feature to the overlay

--- a/style.css
+++ b/style.css
@@ -73,14 +73,24 @@ ul {
 /* The widely used Overlay */
 #overlay {
   position: fixed; /* Sit on top of the page content */
-  display: none; /* Hidden by default */
+  display: black; /* Hidden by default */
   width: 100%; /* Full width (cover the whole page) */
   height: 100%; /* Full height (cover the whole page) */
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.5); /* Black background with opacity */
+  background-color: rgba(
+    255,
+    255,
+    255,
+    0.5
+  ); /* white background with opacity */
+  -webkit-backdrop-filter: blur(15px) !important;
+  -moz-backdrop-filter: blur(15px) !important;
+  -ms-backdrop-filter: blur(15px) !important;
+  -o-backdrop-filter: blur(15px) !important;
+  backdrop-filter: blur(15px) !important;
   cursor: pointer; /* Add a pointer on hover */
 }
 
