--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ ul {
 /* The widely used Overlay */
 #overlay {
   position: fixed; /* Sit on top of the page content */
-  display: black; /* Hidden by default */
+  display: none; /* Hidden by default */
   width: 100%; /* Full width (cover the whole page) */
   height: 100%; /* Full height (cover the whole page) */
   top: 0;
@@ -190,6 +190,27 @@ ul {
 
 #gallery article {
   display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  /* display: flex; */
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#gallery article img {
+  max-width: 90%;
+}
+#gallery article p {
+  max-width: 90%;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 35px;
+  line-height: 43px;
+  text-align: center;
 }
 
 #gallery .row {
