--- a/style.css
+++ b/style.css
@@ -80,6 +80,11 @@ ul {
   left: 0;
   right: 0;
   bottom: 0;
+
+  cursor: pointer; /* Add a pointer on hover */
+}
+
+.blurryEffect {
   background-color: rgba(
     255,
     255,
@@ -91,7 +96,6 @@ ul {
   -ms-backdrop-filter: blur(15px) !important;
   -o-backdrop-filter: blur(15px) !important;
   backdrop-filter: blur(15px) !important;
-  cursor: pointer; /* Add a pointer on hover */
 }
 
 /* Header & Hamburger Menu */
@@ -135,11 +139,14 @@ ul {
   --paddingY: 48px;
   background: black;
   position: absolute;
-  top: 0;
+  top: 10px;
   right: 0;
   padding-top: var(--paddingY);
   padding-bottom: var(--paddingY);
   border-radius: 10px;
+  box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.25);
+  transition: top 500ms, opacity 500ms;
+  opacity: 0;
 }
 #hamburger-menu nav ul .nav-item {
   font-style: normal;
