--- a/style.css
+++ b/style.css
@@ -568,6 +568,10 @@ footer {
     margin-top: 30px;
   }
   /* Gallery Section */
+  .page-section#gallery {
+    padding: 30px 0;
+  }
+
   #gallery .row .col {
     width: 46%;
     padding: 15px 0 0 0;
