small padding to enhance the hero container

--- a/style.css
+++ b/style.css
@@ -682,6 +682,12 @@ footer {
 @media (max-width: 450px) {
 }
 
+@media (max-height: 800px) {
+  #hero .container {
+    padding-top: 100px;
+  }
+}
+
 @media (max-height: 670px) {
   #hero article p {
     margin-bottom: 30px;
