enhanced selected-image p font-size

--- a/style.css
+++ b/style.css
@@ -622,6 +622,11 @@ footer {
     line-height: 52px;
     line-height: 202%;
   }
+
+  /* Gallery Section */
+  #gallery article p {
+    font-size: 30px;
+  }
 }
 
 @media (max-width: 500px) {
