--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ button:-moz-focusring,
 /* Global Classes */
 
 .container {
-  max-width: 1720px;
+  /* max-width: 1720px; */
   width: 90%;
   /* background-color: red; */
   margin: auto;
@@ -395,7 +395,7 @@ button:-moz-focusring,
 }
 
 #gallery .row .col .img-container {
-  width: 67.5%;
+  width: 80%;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -528,7 +528,15 @@ footer {
 }
 
 /* Media Query */
-@media (max-width: 1400px) {
+@media (max-width: 1536px) {
+  /* Hero Section */
+  #hero #img-container.col {
+    width: 50%;
+  }
+  #hero article.col {
+    width: 48%;
+  }
+
   #hero article h1 {
     font-size: 65px;
   }
@@ -716,13 +724,13 @@ footer {
 @media (max-width: 450px) {
 }
 
-@media (max-height: 800px) {
+@media (max-width: 1536px) and (max-height: 1080px) {
   #hero .container {
     padding-top: 100px;
   }
 }
 
-@media (max-height: 670px) {
+@media (max-width: 800px) and (max-height: 800px) {
   #hero article p {
     margin-bottom: 30px;
   }
