--- a/style.css
+++ b/style.css
@@ -384,7 +384,7 @@ button:-moz-focusring,
 #gallery .row {
   flex-wrap: wrap;
   text-align: center;
-  justify-content: space-between;
+  justify-content: center;
   min-height: 100vh;
 }
 
@@ -392,11 +392,14 @@ button:-moz-focusring,
   width: 31.5%;
   /* background-color: blue; */
   padding: 48px 0 0 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 #gallery .row .col .img-container {
   width: 80%;
-  height: 100%;
+  aspect-ratio: 365/404;
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
@@ -600,6 +603,10 @@ footer {
   #gallery article button img {
     width: 20px;
     height: 20px;
+  }
+
+  #gallery .row {
+    justify-content: space-between;
   }
 
   #gallery .row .col {
