--- a/style.css
+++ b/style.css
@@ -391,8 +391,10 @@ button:-moz-focusring,
   display: flex;
   min-height: min-content;
   max-width: 90%;
-  margin: auto;
+  /* margin: auto; */
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 #gallery article button {
   position: absolute;
