--- a/style.css
+++ b/style.css
@@ -424,7 +424,7 @@ button:-moz-focusring,
   max-width: 90%;
   /* max-height: 68%; */
 }
-#gallery article div p {
+#gallery article div > p {
   max-width: 90%;
   font-style: normal;
   font-size: 35px;
@@ -783,7 +783,7 @@ footer {
   }
 
   /* Gallery Section */
-  #gallery article p {
+  #gallery article div > p {
     font-size: 30px;
   }
 
@@ -834,7 +834,7 @@ footer {
     background-position: -864px 100%;
   }
 
-  #gallery article p {
+  #gallery article div > p {
     font-size: 20px;
     line-height: 28px;
     /* line-height: 75%; */
@@ -869,12 +869,5 @@ footer {
 @media (max-width: 800px) and (max-height: 800px) {
   #hero article p {
     margin-bottom: 30px;
-  }
-}
-
-@media (max-height: 420px) {
-  #gallery article div {
-    /* padding-top: 700px;
-    padding-bottom: 30px; */
   }
 }
