some naming updates

--- a/style.css
+++ b/style.css
@@ -34,14 +34,15 @@ body {
   flex-direction: row;
 }
 
-.page-section#gallery {
+.page-section#launcher {
   background-image: url(./assets/background.png);
   background-color: var(--secondaryBackgroundColor);
   background-size: 100% auto;
   background-position: right bottom;
+  background-repeat: no-repeat;
 }
 
-#gallery .row {
+#launcher .row {
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   text-align: center;
@@ -53,7 +54,7 @@ body {
   gap: 18px;
 }
 
-#gallery .row .col {
+#launcher .row .col {
   width: 31.5%;
   /* background-color: blue; */
 
@@ -68,7 +69,7 @@ body {
   justify-content: center;
 }
 
-#gallery .row .col .img-container {
+#launcher .row .col .img-container {
   width: 80%;
   /* min-height: 88.5%; */
   aspect-ratio: 1;
@@ -88,19 +89,19 @@ body {
   cursor: pointer;
 }
 
-#gallery .row .col:nth-of-type(3n-2) .img-container {
+#launcher .row .col:nth-of-type(3n-2) .img-container {
   margin-right: auto;
 }
-#gallery .row .col:nth-of-type(3n-1) .img-container {
+#launcher .row .col:nth-of-type(3n-1) .img-container {
   margin-left: auto;
   margin-right: auto;
 }
 
-#gallery .row .col:nth-of-type(3n) .img-container {
+#launcher .row .col:nth-of-type(3n) .img-container {
   margin-left: auto;
 }
 
-#gallery .row .col .img-container .gallery-img {
+#launcher .row .col .img-container .launcher-img {
   -webkit-box-flex: 2;
   -ms-flex-positive: 2;
   flex-grow: 2;
@@ -112,51 +113,51 @@ body {
   border-width: 1px; */
 }
 
-#gallery .row .col .img-container.m-auto {
+#launcher .row .col .img-container.m-auto {
   margin: auto;
 }
 
 @media (max-width: 1200px) {
-  /* Gallery Section */
-  #gallery article button {
+  /* launcher Section */
+  #launcher article button {
     top: 30px;
     right: 30px;
   }
 }
 
 @media (max-width: 1025px) {
-  #gallery .row {
+  #launcher .row {
     -webkit-box-pack: justify;
     -ms-flex-pack: justify;
     justify-content: space-between;
   }
 
-  #gallery .row .col {
+  #launcher .row .col {
     width: 46%;
     padding: 15px 0 0 0;
   }
 
-  #gallery .row .col .img-container {
+  #launcher .row .col .img-container {
     width: 100%;
     /* min-height: 111.24%; */
     aspect-ratio: 1;
   }
 
-  #gallery .row .col .img-container.m-auto {
+  #launcher .row .col .img-container.m-auto {
     margin: unset;
   }
 
-  #gallery .row .col:nth-of-type(odd) .img-container {
+  #launcher .row .col:nth-of-type(odd) .img-container {
     margin-right: auto;
     margin-left: 0;
   }
 
-  #gallery .row .col:nth-of-type(even) .img-container {
+  #launcher .row .col:nth-of-type(even) .img-container {
     margin-left: auto;
     margin-right: 0;
   }
 
-  #gallery .row .col .img-container .gallery-img-number {
+  #launcher .row .col .img-container .launcher-img-number {
     font-size: 20px;
     line-height: 37px;
     /* line-height: 100%; */
@@ -164,7 +165,7 @@ body {
 }
 
 @media (max-width: 500px) {
-  .page-section#gallery {
+  .page-section#launcher {
     background-size: 1365px 678px;
     background-position: -864px 100%;
   }
